# dispersion-toolkit

./: .clang-format  .gitignore  CMakeLists.txt  changelog  conventions.md  credits  maintainers  readme.md  specifications.md
cmake/: gcc.cmake  msvc.cmake
doc/: manual-template.tex  manual.mdpp
script/: configure-file.py  configure-manual.sh  make-documentation-pdf.sh  mkmanpage.sh  package.sh
src/adapter/matrix/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp
src/adapter/readmatrix/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.hpp.in  manpage.md
src/adapter/utk/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/adapter/writematrix/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/ana/convergence/: CMakeLists.txt  main.cpp
src/index/: pointset_dsorted.cpp  pointset_dsorted.hpp
src/io/: argparse.cpp  argparse.hpp  ftokens.hpp  ipointset.cpp  ipointset.hpp  opointset.cpp  opointset.hpp  ostream.cpp  ostream.hpp
src/math/: arithmetic.cpp  arithmetic.hpp  pointset.hpp  types.hpp
src/measure/dispcombinatorial/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/measure/dispdumitrescu2017/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/measure/dispgs/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/measure/dispnaamad/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/measure/dispsublattice/: CMakeLists.txt  main.cpp
src/measure/pdisppermute/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/opt/dispoptgs/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/opt/mindispgs/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/set/cswap/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/set/fibonacci/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/set/kritzinger/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/stat/confidence/: CMakeLists.txt  main.cpp  manpage.1  manpage.hpp  manpage.md
src/vis/graphs/: CMakeLists.txt  graphs.py
src/vis/psspy/: CMakeLists.txt  manpage.1  manpage.hpp  manpage.md  pss.py
src/vis/rectangles/: CMakeLists.txt  rectangles.py
